themes/SuiteP/css/style.css
/* ... */
/* basic search form on mobile (very small screen) */

@media (max-width: 310px) {

    #search_form .edit.view.search.basic div.search_name_basic input {
        width: 75% !important;
    }

    #search_form .edit.view.search.basic a#advanced_search_link {
        background-position: 90% 2px;
        text-align: left;
        white-space: nowrap;
    }

    #search_form .edit.view.search.basic .button, input[type=submit],
    #search_form .edit.view.search.basic input[type=button],
    #search_form .edit.view.search.basic input[type=reset],
    #search_form .edit.view.search.basic a#advanced_search_link
    {
        font-size: 10px !important;
    }

    #search_form .edit.view.search.basic div.search_fields_basic:nth-of-type(3n+1) {
        margin: 0;
    }

}

/* basic search form on mobile */

@media (max-width: 600px) {

    #search_form .edit.view.search.basic .submitButtons .button,
    #search_form .edit.view.search.basic .submitButtons input[type=submit],
    #search_form .edit.view.search.basic .submitButtons input[type=button],
    #search_form .edit.view.search.basic .submitButtons input[type=reset] {
        margin: 0 2px;
        width: 48%;
    }

    #search_form.search_form .edit.view.search.basic input[type=text],
    #search_form.search_form .edit.view.search.basic input[type=password],
    #search_form.search_form .edit.view.search.basic input:not([type]),
    #search_form.search_form .edit.view.search.basic textarea,
    #search_form.search_form .edit.view.search.basic select {
        border: none;
        padding: 0 5px;
        width: 100% !important;
        line-height: 40px;
        margin-bottom: 2px;
    }
    #search_form.search_form .edit.view.search.basic input[type=text][name="name_basic"],
    #search_form.search_form .edit.view.search.basic input[type=text][name="search_name_basic"] {
        width: 82% !important;
        float: right;
        margin-right: 6px;
    }

    #search_form .edit.view.search.basic div.search_fields_basic {
        line-height: 18px;
        margin: 0;
        float: left;
        display: block;
        width: 100% !important;
        padding: 0 0 10px 0;
    }

    #search_form .edit.view.search.basic div.search_fields_basic:nth-of-type(3n+1) {
        float: left;
        display: block;
        width: initial;
    }

    #search_form .edit.view.search.basic div.search_fields_basic .col-lg-3,
    #search_form .edit.view.search.basic .col-lg-9 {
        float: right;
        width: 98% !important;
    }

    #search_form .edit.view.search.basic a#advanced_search_link {
        margin: 4px 2px;
        background-position: 90% 2px;
        width: 97%;
        text-align: center;
        white-space: nowrap;
    }

    #search_form .edit.view.search.basic .submitButtons {
        font-size: 0;
    }


    #search_form .edit.view.search.basic label {
        width: 100% !important;
        text-align: right;
    }
}


/* basic search on tablet view */

@media(min-width: 601px) and (max-width: 1080px) {

    #search_form .edit.view.search.basic {
        position: relative;
    }

    #search_form .edit.view.search.basic div.search_name_basic input {
        width: 54% !important;
        position: absolute;
        top: 20px;
        left: 48px;
        border: none;
        padding: 0 5px;
    }

    #search_form .edit.view.search.basic .row:nth-of-type(3n) {
        width: 34% !important;
        top: 20px;
        position: absolute;
        right: 0;
        min-width: 215px;
    }
    #search_form .edit.view.search.basic .row:nth-of-type(3n) .button,
    #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=submit],
    #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=button],
    #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=reset] {
        width: 43%;
    }

    #search_form .edit.view.search.basic .row {
        width: 60% !important;
        display: block;
        float: left;
    }

    #search_form .edit.view.search.basic a#advanced_search_link {
        width: 88.5%;
        min-width: initial;
        background-position: 90% 2px;
        white-space: nowrap;
    }

    #search_form .edit.view.search.basic .button,
    #search_form .edit.view.search.basic input[type=submit],
    #search_form .edit.view.search.basic input[type=button],
    #search_form .edit.view.search.basic input[type=reset] {
        margin: 0 2px 0 0;
        padding: initial;
    }

    #search_form .edit.view.search.basic div.search_fields_basic .col-lg-3,
    #search_form .edit.view.search.basic .col-lg-9 {
        float: right;
    }

    #search_form .edit.view.search.basic div.search_fields_basic {
        margin: 10px 0 -12px 37px;
        width: initial;
    }

    #search_form .edit.view.search.basic div.search_name_basic img {
        margin: 5px 8px -6px 8px;
    }

    #search_form .edit.view.search.basic .clear.hidden {
        display: block !important;
        float: none;
        clear: both;
    }

}
/* ... */

